# cross_contract_near

./: README.org
contract-cross/: Cargo.toml
contract-cross/src/: lib.rs
near-bootcamp/: Cargo.toml  Makefile.toml  README.org
near-bootcamp/src/: lib.rs
